<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        style="@style/MainLinearLayout">

        <RelativeLayout
            style="@style/LogoRelativeLayout">

            <ImageView
                style="@style/LogoImageView"/>

            <TextView
                style="@style/LogoTextView"
                android:text="@string/LogoText"/>

        </RelativeLayout>

        <LinearLayout
            style="@style/MainQuestionLinearLayout"
            android:id="@+id/main_questions_layout">

            <TextView
                style="@style/PadawanTextView"
                android:text="@string/Padawan"/>

            <TextView
                style="@style/MessageTextView"
                android:text="@string/Message" />

            <LinearLayout
                style="@style/QuestionLayoutStyle"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionTextView"
                    android:text="@string/Name" />

                <EditText
                    android:id="@+id/player_name"
                    style="@style/EditText"
                    android:hint="@string/NameHint" />

            </LinearLayout>

            <RelativeLayout style="@style/QuestionLayoutStyle">

                <TextView
                    android:id="@+id/akbar_question"
                    style="@style/QuestionTextView"
                    android:text="@string/QuestionOne" />

                <LinearLayout
                    style="@style/RadioLinearLayout"
                    android:layout_below="@id/akbar_question">

                    <RadioGroup
                        style="@style/RadioGroup"
                        android:layout_weight="2">

                        <RadioButton
                            android:id="@+id/one_good_answer"
                            style="@style/RadioButton"
                            android:text="@string/MonCala" />

                        <RadioButton
                            style="@style/RadioButton"
                            android:text="@string/Tatooine" />

                        <RadioButton
                            style="@style/RadioButton"
                            android:text="@string/Naboo" />

                        <RadioButton
                            style="@style/RadioButton"
                            android:text="@string/NarShaddaa" />

                    </RadioGroup>

                    <ImageView
                        style="@style/ImageView"
                        android:src="@drawable/akbar" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout style="@style/QuestionLayoutStyle2">

                <TextView
                    android:id="@+id/sidious_question"
                    style="@style/QuestionTextView2"
                    android:text="@string/QuestionTwo" />

                <LinearLayout
                    style="@style/OverCheckBoxLinearLayout"
                    android:layout_below="@id/sidious_question">

                    <ImageView
                        style="@style/ImageView"
                        android:src="@drawable/palp" />

                    <LinearLayout style="@style/CheckBoxLinearLayout">

                        <CheckBox
                            style="@style/CheckBox2"
                            android:text="@string/General" />

                        <CheckBox
                            android:id="@+id/two_good_answerA"
                            style="@style/CheckBox2"
                            android:text="@string/Count" />

                        <CheckBox
                            android:id="@+id/two_good_answerB"
                            style="@style/CheckBox2"
                            android:text="@string/Anakin" />

                        <CheckBox
                            android:id="@+id/two_good_answerC"
                            style="@style/CheckBox2"
                            android:text="@string/Maul" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                style="@style/QuestionLayoutStyle3">

                <TextView
                    style="@style/QuestionTextView"
                    android:text="@string/QuestionThree" />


                <EditText
                    android:id="@+id/three_good_answer"
                    style="@style/EditText"
                    android:hint="@string/ShipsName"/>

                <ImageView
                    style="@style/FalconImageView"/>

            </LinearLayout>

            <RelativeLayout style="@style/QuestionLayoutStyle">

                <TextView
                    android:id="@+id/old_republic_question"
                    style="@style/QuestionTextView"
                    android:text="@string/QuestionFour" />


                <LinearLayout
                    style="@style/RadioLinearLayout"
                    android:layout_below="@id/old_republic_question">

                    <ImageView
                        style="@style/ImageView"
                        android:src="@drawable/malak" />

                    <RadioGroup
                        style="@style/RadioGroup"
                        android:layout_weight="1">

                        <RadioButton
                            style="@style/RadioButton"
                            android:text="@string/FiveYears" />

                        <RadioButton
                            style="@style/RadioButton"
                            android:text="@string/TenYears" />

                        <RadioButton
                            android:id="@+id/four_good_answer"
                            style="@style/RadioButton"
                            android:text="@string/FourYears" />

                        <RadioButton
                            style="@style/RadioButton"
                            android:text="@string/TwoYears" />

                    </RadioGroup>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout style="@style/QuestionLayoutStyle">

                <TextView
                    android:id="@+id/planets_question"
                    style="@style/QuestionTextView"
                    android:text="@string/QuestionFive" />

                <LinearLayout
                    style="@style/OverCheckBoxLinearLayout"
                    android:layout_below="@id/planets_question">

                    <LinearLayout style="@style/CheckBoxLinearLayout">

                        <CheckBox
                            android:id="@+id/five_good_answerA"
                            style="@style/CheckBox"
                            android:text="@string/Jinn" />

                        <CheckBox
                            style="@style/CheckBox"
                            android:text="@string/Kenobi" />

                        <CheckBox
                            android:id="@+id/five_good_answerB"
                            style="@style/CheckBox"
                            android:text="@string/Luke" />

                        <CheckBox
                            style="@style/CheckBox"
                            android:text="@string/Binks" />

                    </LinearLayout>

                    <ImageView
                        style="@style/ImageView"
                        android:src="@drawable/yoda" />

                </LinearLayout>

            </RelativeLayout>

            <Button
                style="@style/ButtonStyle"
                android:onClick="isNameThere"
                android:text="@string/Submit" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>